.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:41:38 **** Incremental Build of configuration Debug for project Fstring main ****
make all 
Building file: ../src/Fstring.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Fstring.d" -MT"src/Fstring.o" -o "src/Fstring.o" "../src/Fstring.cpp"
../src/Fstring.cpp: In constructor ‘Fstring::Fstring(const char&)’:
../src/Fstring.cpp:49:9: error: returning a value from a constructor
  return this;
         ^~~~
src/subdir.mk:28: recipe for target 'src/Fstring.o' failed
make: *** [src/Fstring.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
